--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,101 +1,91 @@
-.filters {
-	display: block;
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+.container .filter {
+    display: flex;
+    align-items: center;
+    background: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDD;
+    border-radius: 4px;
 }
 
-.locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
-
-	line-height: 20px;
-	border-right: 1px solid #DDDDDD;
+.container .filter button {
+    color: #FFF;
+    font-size: 18px;
+    background: #FF5A5F;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    position: absolute;
+    right: 30px;
 }
 
-.filter_amenities {
-	display: inline;
-	vertical-align: middle;
-	height: 100%;
-	float: left;
+
+.container .filter button:hover {
+    opacity: 90%;
+}
+
+.container .filter .locations,
+.container .filter .amenities {
+    display: inline-block;
+    position: relative;
+    height: 100%;
     width: 25%;
-
-	line-height: 20px;
 }
 
-.popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+.container .filter .locations {
+    border-right: 1px solid #DDD;
 }
 
-.locations:hover .popover {
-	display: inline-block;
+.container .filter h3,
+.container .filter h4 {
+    margin: 0;
+    padding: 0;
+    text-indent: 20%;
+    padding-bottom: 2px;
 }
 
-.filter_amenities:hover .popover {
-	display: inline-block;
+.container .filter h2 {
+    margin: 20px 0 -20px 0;
+    font-size: 16px;
 }
 
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
+.container .filter h3 {
+    margin-top: 15px;
+    font-weight: 600;
 }
 
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
+.container .filter h4 {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: auto;
 }
 
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
+.container .filter .popover {
+    display: none;
+    background: #FAFAFA;
+    max-height: 300px;
+    overflow-y: auto;
+    border: 1px solid #DDD;
+    border-radius: 4px;
+    margin-top: 16px;
+    list-style: none;
 }
 
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
+.container .filter .amenities-list {
+    padding: 20px 20px 20px 35px;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+.container .filter .amenities-list .amenity {
+    margin-bottom: 10px;
 }
 
-button:hover {
-	opacity: 90%;
+.container .filter .locations .nested-list {
+    margin: 20px auto 20px -20px;
+    list-style: none;
+}
+
+.container .filter .locations:hover > .popover,
+.container .filter .amenities:hover > .popover {
+    display: block;
 }
