--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -1,126 +1,79 @@
-.places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+.container .places h1 {
+    z-index: -1;
+    font-size: 30px;
+    text-indent: 20px;
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+.container .places .flex-places {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+.container .places .flex-places article {
+    z-index: -1;
+    position: relative;
+    width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+}
+.container .places .flex-places .name_price {
+    min-height: 70px;
 }
 
-.price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+.container .places .flex-places .name_price .place_name {
+    margin-top: 10px;
+    width: 75%;
+    font-size: 30px;
+    text-align: left;
 }
 
-.information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+.flex-places .name_price .price_by_night {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    min-width: 60px;
+    height: 60px;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
+    font-size: 30px;
+    color: #FF5A5F;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
+.flex-places .information {
+    display: flex;
+    justify-content: center;
+    height: 80px;
+    margin: 10px 0;
+    border-top: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+}
+
+.max_guests, .number_rooms, .number_bathrooms {
+    display: flex;
+    width: 100px;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.max_guests {
+    background: url("../images/icon_group.png") center top no-repeat;
+}
+
+.number_rooms {
+    background: url("../images/icon_bed.png") center top no-repeat;
+}
+
+.number_bathrooms {
+    background: url("../images/icon_bath.png") center top no-repeat;
 }
 
 .user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
-}
-
-.description {
-	text-align: left;
-}
-
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-article h2 {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
-}
-
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
-
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
